
********************************************************************************

  Project : SHTRIH-M JavaPOS fiscal printer driver
  Company : SHTRIH-M www.shtrih-m.ru (095) 787-6090

********************************************************************************

  December, 9 2016, 18:50
  deviceServiceVersion = 1013325
	
  [-] Fixed error with TLV string tag encoding
  
********************************************************************************

  December, 7 2016, 18:15
  deviceServiceVersion = 1013324
	
  [-] Fixed error tag prefix names
  [+] Added fiscal storage status request after error 
      0x02, Invalid fiscal storage state
  
********************************************************************************

  December, 6 2016, 13:55
  deviceServiceVersion = 1013322
	
  [-] Fixed error with getDayOpened property
  
********************************************************************************

  December, 5 2016, 22:03
  deviceServiceVersion = 1013321
	
  [+] Added printing TLV values on receipt from fsWriteTLV method
  
********************************************************************************

  December, 2 2016, 23:40
  deviceServiceVersion = 1013320
	
  [-] Fixed error with barcode printing by barcodePrefix
  
********************************************************************************

  November, 22 2016, 19:15
  deviceServiceVersion = 1013318
	
  [+] Fixed position printing in FSSalesReceipt
  
********************************************************************************
  November, 22 2016, 17:10
  deviceServiceVersion = 1013317
	
  [-] Fixed errors
  
********************************************************************************

  November, 14 2016, 15:30
  deviceServiceVersion = 1013313
	
  [+] Print discount text in FSFiscalReceipt
  
********************************************************************************

  November, 10 2016, 16:30
  deviceServiceVersion = 1013312
	