@@ -6,6 +6,13 @@
 
 ********************************************************************************
 
+  December, 13 2016, 19:30
+  deviceServiceVersion = 1013326
+	
+  [-] Fixed error with socket port reconnect
+  
+********************************************************************************
+
   December, 9 2016, 18:50
   deviceServiceVersion = 1013325
 	
